# midi-keyboard-player

./: README.md  hmusica.cabal  stack.yaml  test.hs
app/: .Main.hs.swp  Main.hs
app/Musica/Midi/: KeyMap.hs  NoteKind.hs  NoteStream.hs
app/Musica/Render/: .Keyboard.hs.swp  .Staff.hs.swp  Keyboard.hs  Staff.hs
songs/: beethoven_fur_elise.mid  escala.mid
