name:                hmusica
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hmusica#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hmusica-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Musica.Render.Keyboard
                     , Musica.Render.Staff
                     , Musica.Midi.KeyMap
                     , Musica.Midi.NoteStream
  build-depends:       base
                     , PortMidi >= 0.1.6.0
                     , midi >= 0.2.2.1
                     , gloss >= 1.10.1.1
                     , optparse-generic >= 1.1.1
                     , containers >= 0.5.6.2
                     , event-list >= 0.1.1.3
                     , transformers >= 0.4.2.0
                     , gloss-juicy >= 0.2.1
  default-language:    Haskell2010
